# zenoh_fl

./: .gitignore  Dockerfile  README.md  Util.py  compare.py  config.py  docker-compose.yml  entrypoint.sh  federated_learning.py  generate_table.py  host_file  hyperparameters.txt  install.sh  mpi_capture.pcap  mpi_centralized_assync.py  mpi_centralized_sync.py  mpi_decentralized_assync.py  mpi_decentralized_sync.py  requirements.txt  run-tests.sh  run.sh  run_all.sh  run_experiments.sh  run_hyperparameter_search.sh  zenoh_capture.pcap
FLASH/: FLASH.py
IOT_DNL/data/: y_test.csv  y_train.csv  y_val.csv
IOT_DNL/data/2_workers/: y_train_subset_1.csv  y_train_subset_2.csv
IOT_DNL/data/4_workers/: y_train_subset_1.csv  y_train_subset_2.csv  y_train_subset_3.csv  y_train_subset_4.csv
IOT_DNL/fl/centralized_async/8_200/: server.json  trained_model.keras  worker1.json  worker2.json  worker3.json  worker4.json  worker5.json  worker6.json  worker7.json  worker8.json
IOT_DNL/fl/centralized_sync/8_200/: trained_model.keras  worker1.json  worker2.json  worker3.json  worker4.json  worker5.json  worker6.json  worker7.json  worker8.json
IOT_DNL/fl/decentralized_async/8_300_3_0.2/: server.json  trained_model.keras  worker1.json  worker2.json  worker3.json  worker4.json  worker5.json  worker6.json  worker7.json  worker8.json
IOT_DNL/fl/decentralized_sync/8_300_3/: server.json  trained_model.keras  worker1.json  worker2.json  worker3.json  worker4.json  worker5.json  worker6.json  worker7.json  worker8.json
MPI/: calc_time.py  centralized_async.py  centralized_sync.py  decentralized_async.py  decentralized_sync.py  host_file  host_file copy  run.sh
Results/: compare.py  get_messages.py  plot_history.py
Slicing5G/data/: X_test.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
Slicing5G/data/2_workers/: x_train_subset_1.csv  x_train_subset_2.csv  y_train_subset_1.csv  y_train_subset_2.csv
Slicing5G/data/4_workers/: x_train_subset_1.csv  x_train_subset_2.csv  x_train_subset_3.csv  x_train_subset_4.csv  y_train_subset_1.csv  y_train_subset_2.csv  y_train_subset_3.csv  y_train_subset_4.csv
ZENOH/: Dockerfile  calc_time.py  centralized_async.py  centralized_sync.py  debug.py  decentralized_async.py  decentralized_sync.py  requirements.txt  run-tests.sh  z_training_worker.py
ZENOH/zcomm/: __init__.py
data_processing/: data_division.py  data_processing.py
datasets/FLASH/: FLASH.py
datasets/IOT_DNL/: IOT_DNL.py
datasets/NetSlice5G/: NETSLICE5G.py
datasets/NetSlice5G/data/: readme.md
datasets/Slicing5G/: Slicing5G.py
datasets/UNSW/: UNSW.py
docker_old/: Dockerfile
zcomm/: Cargo.toml  Dockerfile.zcomm  README.md  example.py  pyproject.toml  requirements-dev.txt  run-zcomm.sh  zcomm-compose.yml
zcomm/src/: lib.rs
zenoh/: docker-compose.yml  entrypoint.sh  run-tests.sh  z_centralized_async.py  z_centralized_sync.py  z_decentralized_async.py  z_decentralized_sync.py
zenoh/zcomm/: __init__.py
(+135 files in other folders)
