[package]
edition = "2021"
name = "zcomm"
version = "0.1.0"

[features]
abi-py37 = ["pyo3/abi3-py37"]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "abi-py37"]

[dependencies]
anyhow = "1.0.82"
bitcode = "=0.6.0"
clap = { version = "4.4.11", features = ["derive"] }
flume = "0.11.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zenoh = { version = "0.11.0-rc.2" }
pyo3 = "0.20"
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
pyo3-build-config = { version = "0.20", features = ["resolve-config"] }