[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"

[project]
name = "zcomm"
description = "The python API for zcomm"
requires-python = ">=3.7"
author = "Gabriele Baldoni"
author_email = "gabriele.baldoni@gmail.com"
classifiers = [
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Intended Audience :: Developers",
        "Development Status :: 3 - Alpha",
        "License :: OSI Approved :: Apache Software License",
        "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
]
zip_safe = false
